fixed bio css spacing issue

--- a/src/Components/BioHeader.css
+++ b/src/Components/BioHeader.css
@@ -4,7 +4,7 @@
   font-weight: 100;
   text-shadow: 0px 2px 5px 00000050;
   margin-top: 100px;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   flex: 1;
 }
 
